--- a/Pages/ClinicSlotModify.cshtml
+++ b/Pages/ClinicSlotModify.cshtml
@@ -65,6 +65,10 @@
             </div>
         </div>
 
+        <div class="row mb-5 g-5">
+            <textarea name="comments"></textarea>
+        </div>
+
 
         <div class="row mb-5 g-5">
             <div class="col-md-6 text-center">
