--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -62,6 +62,11 @@ body {
     color: whitesmoke !important;
 }
 
+.currentapptletterprinted {
+    background-color: darkslateblue !important;
+    color: whitesmoke !important;
+}
+
 .selecteditem {
     background-color: yellow !important;
     color: black !important;
