WL ID, return value, filenames, cancellation reason

--- a/Pages/AppConfirm.cshtml
+++ b/Pages/AppConfirm.cshtml
@@ -102,6 +102,7 @@
                 <input id="txtDat" name="dat" value=@Model.appDate.ToString("yyyy-MM-dd") />
                 <input id="txtTim" name="tim" value=@Model.appTime.ToString("HH:mm:ss") />
                 <input id="txtDur" name="dur" value=@Model.appDur />
+                <input id="txtWLID" name="wlid" value=@Model.wlID />
             }
         </div>
     </form>
