change data source

--- a/Pages/AddToWL.cshtml
+++ b/Pages/AddToWL.cshtml
@@ -28,7 +28,7 @@
                         {
                             @foreach (var item in Model.referralList)
                             {
-                                <option value=@item.RefID>@item.RefType - @item.RefDate, @item.ReferringClinician, @item.ReferringFacility</option>
+                                <option value=@item.refid>@item.RefType - @item.RefDate, @item.ReferringClinician, @item.ReferringFacility</option>
                             }
                         }
                     </select>
