--- a/Pages/ChoosePatient.cshtml
+++ b/Pages/ChoosePatient.cshtml
@@ -29,9 +29,9 @@
             </div>
             <div class="row">
                 <div class="col-md-6">
-                    @if(Model.patient.DOB.ToString("yyyy-MM-dd") != "0001-01-01")
+                    @if(Model.patient.DOB.Value.ToString("yyyy-MM-dd") != "0001-01-01")
                     {
-                        <label class="w-100">@Model.patient.DOB.ToString("dd/MM/yyyy")</label>
+                        <label class="w-100">@Model.patient.DOB.Value.ToString("dd/MM/yyyy")</label>
                     }
                 </div>
             </div>
