--- a/Pages/WLModify.cshtml
+++ b/Pages/WLModify.cshtml
@@ -13,7 +13,7 @@
     </div>
     <div class="row">
         <div class="text-center">
-            <h2>DOB: @Model.patient.DOB.ToString("dd/MM/yyyy")</h2>
+            <h2>DOB: @Model.patient.DOB.Value.ToString("dd/MM/yyyy")</h2>
         </div>
     </div>
     <div class="row">
